--- a/first-project/index.html
+++ b/first-project/index.html
@@ -8,8 +8,9 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <input type="number" id="num1" placeholder="Number 1" />
+    <p></p><input type="number" id="num1" placeholder="Number 1" />
     <input type="number" id="num2" placeholder="Number 2" />
-    <button>Add!</button>
+    <button>Add!</button></p>
+    <p><div id="output"></div></p>
   </body>
 </html>
