progress in compiler lesson

--- a/compiler-lesson/index.html
+++ b/compiler-lesson/index.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
-  <script src="app.js" defer></script>
+  <script src="dist/app.js" defer></script>
+  <script src="dist/analytics.js" defer></script>
 </head>
 <body>
-  Hallo Welt!
+  <p>Hallo Welt!</p>
+  <p><form method="get">
+  <input type="button" id="button" value="Say Hello"/>
+  </form></p>
 </body>
 </html>
