progress on chapter 6

--- a/adv-types/index.html
+++ b/adv-types/index.html
@@ -8,6 +8,11 @@
   <script src="dist/app.js" defer></script>
 </head>
 <body>
-  <button id="button">Hallo Welt!</button>
+  <p><button id="button">Hallo Welt!</button>
+  <input title="user" type="text" id="user-input"/></p>
+  <p><select id="testSelect" title="select something">
+    <option value="testSelect_Option1">Option1</option>
+    <option value="testSelect_Option2">Option2</option>
+  </select></p>
 </body>
 </html>
