Chapter on decoratros done.

--- a/decorators/index.html
+++ b/decorators/index.html
@@ -8,5 +8,43 @@
   <script src="dist/app.js" defer></script>
 </head>
 <body>
+  <div id="contentContainer"></div>
+  <button id="button" type="submit">Klick mich!</button>
+  <!--<form action="">
+    <table>
+      <tr>
+        <td>
+          <input id="1" title="1" type="text"/>
+        </td>
+        <td>
+          <input id="2" title="2" type="text"/>
+        </td>
+        <td>
+          <input id="3" title="3" type="text"/>
+        </td>
+        <td>
+          <input id="4" title="4" type="text"/>
+        </td>
+      </tr>
+    </table>
+  </form> -->
+  <form id="courseForm">
+    <table>
+      <thead>
+        <th colspan="3">Course Form</th>
+      </thead>
+      <tr>
+        <td>
+          <input id="title" placeholder="Course title" type="text"/>
+        </td>
+        <td>
+          <input id="price" placeholder="Course price" type="text"/>
+        </td>
+        <td>
+          <button type="submit">Submit course</button>
+        </td>
+      </tr>
+    </table>
+  </form>
 </body>
 </html>
